--- a/package.json
+++ b/package.json
@@ -1,1 +1,14 @@
+{
+  "name": "roam-pool-bot",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "start": "node roam-bot.js"
+  },
+  "dependencies": {
+    "@solana/web3.js": "^1.98.0",
+    "ethers": "^6.10.0",
+    "node-telegram-bot-api": "^0.66.0"
+  }
+}
 
